[project]
name = "quantshark-shared"
version = "0.1.0"
description = "Shared for quantshark projects"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "sqlmodel>=0.0.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "ANN", "Q", "T20", "N", "TID"]
ignore = ["ANN002", "ANN003"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["quantshark_shared"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "basic"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "ruff>=0.14.14",
]
