[project]
name = "quantshark-shared"
version = "0.1.0"
description = "Shared for quantshark projects"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "alembic>=1.18.2",
    "alembic-postgresql-enum>=1.8.0",
    "psycopg>=3.3.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy-timescaledb",
    "sqlmodel>=0.0.31",
]

[project.optional-dependencies]
testing = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "testcontainers[postgres]>=4.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["quantshark_shared"]

[tool.ruff]
line-length = 99
target-version = "py313"
exclude = ["quantshark_shared/migrations"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "ANN", "Q", "T20", "N", "TID"]
ignore = ["ANN002", "ANN003"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["quantshark_shared"]
exclude = ["**/__pycache__", ".venv", "quantshark_shared/migrations"]
typeCheckingMode = "basic"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.uv.sources]
sqlalchemy-timescaledb = { git = "https://github.com/NikitaPirate/sqlalchemy-timescaledb.git" }



[dependency-groups]
dev = [
    "greenlet>=3.3.1", # for sqlalchemy concurrency
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.14",
    "testcontainers[postgres]>=4.10.0",
]
